# sparklet

./: Cargo.toml  Makefile  README.md
data/: cockney-rhyming-slang.toml
src/sparklet/: Cargo.toml  README.md
src/sparklet-cli/: Cargo.toml  README.md
src/sparklet-cli/src/: main.rs
src/sparklet-cli/test/: cli.rs
src/sparklet-tui/: Cargo.toml  Makefile  README.md
src/sparklet-tui/src/: main.rs
src/sparklet/src/: lib.rs
