[package]
version = "0.1.0"
name = "sparklet-tui"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
description = ""
repository = "https://gitlab.com/grauwoelfchen/sparklet"
homepage = "https://gitlab.com/grauwoelfchen/sparklet"
documentation = "https://gitlab.com/grauwoelfchen/sparklet"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-interface", "text-processing"]
keywords = ["text"]
edition = "2021"
exclude = []

[badges]
gitlab = { repository = "grauwoelfchen/sparklet", branch = "trunk" }

[[bin]]
name = "sparklet-tui"
doc = false
path = "src/main.rs"

[dependencies]
# sparklet = "0.1.0"
# sparklet = { path = "../sparklet" }
pancurses = "0.17.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
